# CT2

./: .gitignore  CMakeLists.txt  _1.cpp  _1.h  config.ini  defineCoordinate.cpp  defineCoordinate.h  funcpar.cpp  funcpar.h  funcpar.ui  funcpara.cpp  funcpara.h  guicamera.cpp  guicamera.h  ignore.gitignore  imageprocess.cpp  imageprocess.h  ini.cpp  ini.h  logger.cpp  logger.h  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  myFuncts.cpp  myFuncts.h  my_qlabel.cpp  my_qlabel.h  mystruct.h  structImage.h  tcp_client.cpp  tcp_client.h  widget.cpp  widget.h  widget.ui
789/: CMakeLists.txt  CMakeLists.txt.user.a8a767a  imageprocess.cpp  main.cpp
readIni-master/: testReadIni
